--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AI Powered Reports</title>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Trello Report Generator Power-Up"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://p.trellocdn.com/power-up.min.js"></script>
+    <title>Trello Report Generator</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
